--- a/Landingpage/index.css
+++ b/Landingpage/index.css
@@ -2,12 +2,14 @@ body {
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
   box-sizing: border-box;
   padding-bottom: 50px;
 }
 .header {
   background-color: rgb(40, 88, 83);
-  height: 80vh;
+  height: 60vh;
   padding: 30px 50px;
   color: white;
 }
@@ -264,7 +266,7 @@ small {
 /* media queies */
 @media screen and (max-width: 992px) {
   .header { 
-    height: 80vh; 
+    height: 40vh; 
   }
   .header3 { 
     font-size: 32px; 
@@ -295,7 +297,7 @@ small {
 }
 @media screen and (max-width: 768px) {
   .header{
-    height: 60vh;
+    height: 30vh;
   }
   .menu{
     display: none;
@@ -338,6 +340,10 @@ small {
   }
   #logo{
     font-size:18px;
+  }
+  .header{
+    width: 100%;
+    height: 50vh;
   }
   .one{
     margin-top:50px;
